[package]
name = "loki-rs"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"
description = "A simple database client for Grafana Loki."
readme = "README.md"
repository = "https://github.com/TDay1/loki-rs"
keywords = ["Loki", "Grafana", "logs", "ingest"]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
async-std = {version = "1.12.0", features = ["attributes"]}
futures = "0.3.26"
serde = { version = "1.0.152", features = ["derive"] }
surf = "2.3.2"